src/objects/Chatter_Bot_Group_Member__c.object
<CustomObject>
    <description>A record is created via trigger any time a user is added as a member to the Chatter Group that the parent Chatter Bot Group is monitoring. This allows you to setup Process Builder to be fired when these records are created so that you can take action on member assignments. This is a workaround until if or when Salesforce supports CollaborationGroupMember object in Process Builder.</description>
    <fields>
        <fullName>Chatter_Bot_Group__c</fullName>
        <label>Chatter Bot Group</label>
        <referenceTo>Chatter_Bot_Group__c</referenceTo>
        <relationshipLabel>Chatter Bot Group Members</relationshipLabel>
        <relationshipName>Chatter_Bot_Group_Members</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Chatter_Group_ID__c</fullName>
        <description>The Chatter Group ID this user is a member of.</description>
        <formula>Chatter_Bot_Group__r.Chatter_Group_ID__c</formula>
        <inlineHelpText>The Chatter Group ID this user is a member of.</inlineHelpText>
        <label>Chatter Group ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Chatter_Group_Member_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Chatter Group Member ID</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Is_Member__c</fullName>
        <defaultValue>true</defaultValue>
        <description>So that you can be notified when users are removed from groups, the trigger will on delete of CollaborationGroupMember records uncheck this field then delete this record. You can use Workflow or Process Builder to monitor for this field changing to know if user has been removed from the group.</description>
        <inlineHelpText>So that you can be notified when users are removed from groups, the trigger will on delete of CollaborationGroupMember records uncheck this field then delete this record. You can use Workflow or Process Builder to monitor for this field changing.</inlineHelpText>
        <label>Is Member?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Member</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Chatter_Bot_Group_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Chatter Bot Group Member</label>
    <nameField>
        <displayFormat>CBGM-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Chatter Bot Group Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>